--- a/style/base.less
+++ b/style/base.less
@@ -1,4 +1,4 @@
-/***全局样式***/
+/***鍏ㄥ眬鏍峰紡***/
 .left{float:left}
 .right{float:right}
 .ov{overflow:hidden}
@@ -7,7 +7,7 @@ body{font-size:14px; color:#333}
 a{text-underline:n}
 
 
-/***顶部样式***/
+/***椤堕儴澶村儚***/
 .bmp_top_nav{
   p{.text-align;}
   a{
