--- a/style/base.less
+++ b/style/base.less
@@ -4,12 +4,13 @@
 .ov{overflow:hidden}
 .text-align{text-align:center}
 body{font-size:14px; color:#333}
-
+a{text-decoration: none; color:#333}
+.ov{overflow:hidden}
 
 /***顶部头像***/
 .bmp_top_nav{
   p{.text-align;}
-  a{
+}
+.bmp_top_menu{
 
-  }
 }
